# Genshin-Impact-Tools

./: .gitignore  Pipfile  README.md  main.spec  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  other_questions.yml
.github/workflows/: release.yml  test.yml
src/genshin/: __init__.py  main.py
src/genshin/config/: __init__.py  global_setting.py  user_setting.py
src/genshin/core/: __init__.py  function.py  log.py
src/genshin/module/: clipboard.py  menu.py  update.py  user.py
src/genshin/module/gacha/: __init__.py  data_transform.py  gacha_log.py  gacha_url.py  metadata.py  report_gengrator.py
tests/: conftest.py  test_setting.py
tests/core/: test_function.py
tests/gacha/: test_gacha_url.py  test_merge.py
tests/module/: test_update.py
tests/module/gacha/: test_gacha_url.py  test_merge.py  test_user.py
tests/test_root_dir/merge/: gacha_data_1.json  gacha_data_2.json  gacha_data_3.json  抽卡数据总览.xlsx
